# test-automation-demo

./: .gitignore  .gitlab-ci.yml  Jenkinsfile  README.md  pyproject.toml
.github/workflows/: smoke-tests.yml
apps/contract-parser/: README.md
apps/contract-parser/contract_parser/: __init__.py  indexer.py  main.py  models.py  normalizers.py
apps/contract-parser/tests/: conftest.py  test_normalizers.py
apps/mock-config-builder/: README.md
apps/mock-config-builder/mock_config_builder/: __init__.py  generator.py  main.py  models.py
apps/mock-config-builder/tests/: conftest.py  test_mock_generator.py
apps/mock-server/: README.md
apps/mock-server/mock_server/: __init__.py  config.py  logging_utils.py  main.py  output_config.py  server.py
apps/mock-server/tests/: conftest.py  test_runtime.py
apps/test-executor/: README.md
apps/test-executor/test_executor/: __init__.py  console_reporter.py  drivers.py  http_executor.py  loader.py  main.py  models.py  output_config.py  runner.py
apps/test-executor/tests/: conftest.py  test_runtime.py
apps/test-scenario-builder/: README.md
apps/test-scenario-builder/test_scenario_builder/: __init__.py  builder.py  main.py  prompts.py
apps/test-scenario-builder/tests/: conftest.py  test_generate.py
artifacts/mocks/commerce-operations-api/1-1-0/: mock-config.yaml
artifacts/mocks/commerce/1-1-0/: mock-config.yaml
artifacts/mocks/flight-booking-api/2-3-0/: mock-config.yaml
artifacts/mocks/flights/2-3-0/: mock-config.yaml
artifacts/mocks/payments-api/1-0-0/: mock-config.yaml
plans/: C4SystemContext.mermaid  api-first-rest-mock-workflow-example.md  api-smoke-architecture.md  api-smoke-local.md  architecture-overview.md  payments-smoke-runtime-scenario.md  smoke-runtime-environment.md
plans/archive/: api-smoke-architecture.md
scripts/: README.md  payments-smoke-e2e.ps1  run-smoke-pipeline.ps1  run-smoke-pipeline.py  run-smoke-pipeline.sh
specs/: commerce.yaml  flights.yaml  payments.yaml
workspace/catalog/: index.faiss  index.json  index.meta.jsonl  index.npy
workspace/catalog/commerce/: 1.1.0.json
workspace/catalog/commerce-operations-api/: 1.1.0.json
workspace/catalog/flight-booking-api/: 2.3.0.json
workspace/catalog/flights/: 2.3.0.json
workspace/catalog/payments/: 1.0.0.json
workspace/catalog/payments-api/: 1.0.0.json
(+56 files in other folders)
